# untitled-video-game

./: .gitignore  Cargo.toml  log.txt  meson.build
docs/: wgpu-next-steps.md
src/: main.c  main.rs
src/app/: app.c  app.h
src/gfx/: gfx.c  gfx.h
src/utils/: error.c  error.h  logger.c  logger.h  types.h
