[package]
name = "untitled-video-game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
glam = "0.32.1"
notify = "8.2.0"
pollster = "0.4.0"
rand = "0.10.0"
rand_chacha = "0.10.0"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
wgpu = "28.0.0"
winit = "0.30.13"
